--- a/main.scss
+++ b/main.scss
@@ -50,7 +50,12 @@ body {
   height: 150px;
   margin: auto;
 }
-
+.box_image_ONas {
+  float: left;
+  max-width: 300px;
+  padding: $padding_main/2;
+  padding-right: $padding_main;
+}
 .slider {
   max-width: 100%;
   height: 400px;
@@ -1345,7 +1350,9 @@ width: 75%;
    
     height: 320px;
 }
-
+  .main {
+    display: block;
+  }
   }
 
 @media (max-width: 605px) {
